Add JupyterLab CSV editor, French pack, and dark theme

--- a/binder/environment.yml
+++ b/binder/environment.yml
@@ -5,5 +5,10 @@ dependencies:
   - python=3.12
   - notebook
   - ipykernel
-  - pip
+  - jupyterlab
+  - nodejs
+  - pip:
+    - jupyterlab-spreadsheet-editor
+    - jupyterlab-language-pack-fr
+    - jupyterlab-theme-solarized-dark
 # Add any additional conda dependencies here
