Add numpy, pandas, scipy, seaborn

--- a/binder/environment.yml
+++ b/binder/environment.yml
@@ -6,6 +6,10 @@ dependencies:
   - notebook
   - ipykernel
   - matplotlib
+  - numpy
+  - pandas
+  - scipy
+  - seaborn
   - jupyterlab
   - nodejs
   - pip:
