Ignorer les dossiers techniques pour le build

--- a/jupyterlite_config.json
+++ b/jupyterlite_config.json
@@ -1,6 +1,13 @@
 {
   "LiteBuildConfig": {
     "output_dir": "_output",
-    "contents": "."
+    "contents": ".",
+    "extra_ignore_contents": [
+      ".git",
+      ".github",
+      ".jupyter",
+      "binder",
+      "requirements_old.txt"
+    ]
   }
 }
