--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,11 +26,11 @@ jobs:
       - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install jupyterlite-core jupyterlite-pyodide-kernel jupyter-server fsspec
+          pip install jupyterlite-core jupyterlite-pyodide-kernel jupyter-server fsspec nbformat ipykernel
 
       - name: Build JupyterLite
         run: |
-          jupyter lite build --contents . --output-archive jupyterlite-export.tar.gz
+          jupyter lite build --contents . --output-archive jupyterlite-export.tar.gz --piplite-wheels requirements.txt
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
