--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install jupyterlite-core jupyterlite-pyodide-kernel jupyter-server fsspec nbformat ipykernel
+          pip install jupyterlite-core jupyterlite-pyodide-kernel jupyter-server fsspec nbformat ipykernel matplotlib ipympl numpy pandas scipy
 
       - name: Build JupyterLite
         run: |
