--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,6 +27,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install jupyterlite-core jupyterlite-pyodide-kernel jupyter-server fsspec
+          pip install jupyterlab-language-pack-fr-FR jupyterlab-spreadsheet-editor
           pip install -r requirements.txt
 
       - name: Build JupyterLite
