--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,7 +32,12 @@ jobs:
 
       - name: Build JupyterLite
         run: |
-          jupyter lite build --contents . --output-archive jupyterlite-export.tar.gz
+          # Création de la structure de dossiers pour les réglages par défaut
+          mkdir -p overrides
+          cp overrides.json overrides/overrides.json || echo '{"@jupyterlab/translation-extension:plugin": {"locale": "fr_FR"}}' > overrides/overrides.json
+          
+          # Build avec les overrides explicitement déclarés
+          jupyter lite build --contents . --output-archive jupyterlite-export.tar.gz --overrides overrides/overrides.json
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
