Injection forcée langue FR et priorité backend widget

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,12 +32,10 @@ jobs:
 
       - name: Build JupyterLite
         run: |
-          # Création de la structure de dossiers pour les réglages par défaut
-          mkdir -p overrides
-          cp overrides.json overrides/overrides.json || echo '{"@jupyterlab/translation-extension:plugin": {"locale": "fr_FR"}}' > overrides/overrides.json
-          
-          # Build avec les overrides explicitement déclarés
-          jupyter lite build --contents . --output-archive jupyterlite-export.tar.gz --overrides overrides/overrides.json
+          jupyter lite build --contents . --output-archive jupyterlite-export.tar.gz
+          # Injection forcée de la langue française dans les réglages
+          mkdir -p _output/lab/settings
+          echo '{"@jupyterlab/translation-extension:plugin": {"locale": "fr_FR"}}' > _output/lab/settings/overrides.json
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
