--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-matplotlib==3.8.2
-ipympl==0.9.3
-ipywidgets==8.1.1
-jupyterlab-widgets==3.0.9
-numpy==1.26.2
-scipy==1.11.4
-lmfit==1.2.2
-nbformat==5.9.2
+matplotlib
+ipympl
+ipywidgets
+jupyterlab-widgets
+numpy
+scipy
+lmfit
+nbformat
 jupyterlab-language-pack-fr-FR
 jupyterlab-spreadsheet-editor
