--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,19 +32,24 @@ jobs:
 
       - name: Build JupyterLite
         run: |
-          # Installation forcée pour le build
           pip install jupyterlab-language-pack-fr-FR jupyterlab-spreadsheet-editor
-          
           jupyter lite build --contents . --output-archive jupyterlite-export.tar.gz
           
-          # Injection des paramètres de langue
-          mkdir -p _output/lab/settings
-          echo '{"@jupyterlab/translation-extension:plugin": {"locale": "fr_FR"}}' > _output/lab/settings/overrides.json
-          
-          # Force la langue dans le fichier de config principal
+          # Injection profonde du français dans la configuration du site
           if [ -f _output/jupyter-lite.json ]; then
-            sed -i 's/"locale": ""/"locale": "fr_FR"/g' _output/jupyter-lite.json
+            python3 -c \"
+            import json
+            with open('_output/jupyter-lite.json', 'r') as f:
+                data = json.load(f)
+            data.setdefault('jupyter-config-data', {})['locale'] = 'fr_FR'
+            with open('_output/jupyter-lite.json', 'w') as f:
+                json.dump(data, f)
+            \"
           fi
+          
+          # Overrides pour l'interface utilisateur
+          mkdir -p _output/lab/settings
+          echo '{\"@jupyterlab/translation-extension:plugin\": {\"locale\": \"fr_FR\"}}' > _output/lab/settings/overrides.json
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
