--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,37 +27,14 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install jupyterlite-core jupyterlite-pyodide-kernel jupyter-server fsspec
-          pip install jupyterlab-language-pack-fr-FR jupyterlab-spreadsheet-editor
           pip install -r requirements.txt
 
       - name: Build JupyterLite
         run: |
           jupyter lite build --contents . --output-archive jupyterlite-export.tar.gz
-          
-          # Configuration de la langue via overrides
-          mkdir -p _output/lab/settings
-          cat <<EOF > _output/lab/settings/overrides.json
-          {
-            "@jupyterlab/translation-extension:plugin": {
-              "locale": "fr_FR"
-            }
-          }
-          EOF
-          
-          # Injection profonde dans jupyter-lite.json
-          python3 -c "
-          import json, os
-          path = '_output/jupyter-lite.json'
-          if os.path.exists(path):
-              with open(path, 'r') as f:
-                  data = json.load(f)
-              data.setdefault('jupyter-config-data', {})['locale'] = 'fr_FR'
-              with open(path, 'w') as f:
-                  json.dump(data, f, indent=2)
-          "
 
       - name: Upload artifact
-        uses: actions/upload-pages-artifact@v3
+        uses: upload-pages-artifact@v3
         with:
           path: ./_output
 
